prepping for addition of p5 imports

--- a/src/wto-jukebox-admin.html
+++ b/src/wto-jukebox-admin.html
@@ -381,6 +381,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         </div>
       </form>
     </div>
+
+
+
+    <!-- Embed P5 JS -->
+
+    Taco!
   </template>
 
   <script>
